scrollbar fixed in postFeed

--- a/src/components/SocialPosts.css
+++ b/src/components/SocialPosts.css
@@ -28,7 +28,9 @@
     border: 2px solid #000;
     border-radius: 10px;
     background-color: #fff;
-    overflow-y: scroll hidden;
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
 @media screen and (min-width: 768px) {
